--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -13,3 +13,8 @@
     backdrop-filter: blur(3px);
     z-index: 5;
 }
+.line{
+    border: 0.5px solid $white;
+    width: 100%;
+    
+}
