--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -39,7 +39,6 @@
         background-color: rgba($yellow, 0.5);
         padding: 1.2rem, 2rem;
         &:hover{
-            // box-shadow: inset 0 0 08px $yellow;
             background-color: rgba($lightGreen, 0.5);
         }
     }
@@ -81,10 +80,9 @@
     background: linear-gradient($lightBlue, $lightGreen);
     border: none;
     color: $white;
-    position: absolute; 
-    top: 0;
-    right: 20%;  
-    height: 30%; 
-    padding: 0 1rem;
+    height: 5rem;
+    margin-top: 2rem;
+    width: 15%;
+    position: absolute;
     
 }
